--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  
+
   # Native Splash Screnn
   flutter_native_splash: ^2.4.1
 
   # Crousel Slider
-  carousel_slider: ^4.2.1
+  #carousel_slider: ^4.2.1
 
-  # Firebase
-  firebase_core: ^3.3.0
-  firebase_auth: ^5.1.3
-  firebase_storage: ^12.1.2
-  cached_network_image: ^3.3.1
-  shared_preferences: ^2.3.0
-  cloud_firestore: ^5.2.0
+  # Firebasez
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  firebase_storage: ^12.2.0
+  cached_network_image: ^3.4.0
+  shared_preferences: ^2.3.2
+  cloud_firestore: ^5.4.0
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
 
@@ -71,12 +73,18 @@ dependencies:
   #other dependenciy
   intl: ^0.19.0
   shimmer: ^3.0.0
-  camera: ^0.11.0+1
+
 
   # Maps
   flutter_map: ^6.2.1
   latlong2: ^0.9.1
   flutter_map_cached_tile_provider: ^0.0.2
+  camera: ^0.11.0+2
+  carousel_slider: ^5.0.0
+
+
+
+
 
 dev_dependencies:
   flutter_test:
